--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <div class="bottom">
         <button onclick="printUnder()">Print Under</button>
-        <p class="bottom-text">Yazdırılan yazı</p>
+        <p class="bottom-text"></p>
     </div>
 
     <script src="script.js"></script>
